# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista-scheduler"
description = "Ballista Distributed Compute - Scheduler"
license = "Apache-2.0"
version = "0.7.0"
homepage = "https://github.com/apache/arrow-ballista"
repository = "https://github.com/apache/arrow-ballista"
readme = "README.md"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
edition = "2018"

[package.metadata.configure_me.bin]
scheduler = "scheduler_config_spec.toml"

[features]
default = ["etcd", "sled"]
etcd = ["etcd-client"]
sled = ["sled_package", "tokio-stream"]

[dependencies]
anyhow = "1"
arrow-flight = { git = "https://github.com/apache/arrow-rs.git", rev = "6bb4b5ee16488c2a6427a5897bb6fbe334cc280e", features = ["flight-sql-experimental"], optional = false }
async-recursion = "1.0.0"
async-trait = "0.1.41"
ballista-core = { path = "../core", features = [], optional = false }
base64 = { version = "0.13", default-features = false }
clap = { version = "3", features = ["derive", "cargo"] }
configure_me = "0.4.0"
datafusion = { git = "https://github.com/spaceandtimelabs/arrow-datafusion.git", rev = "40cff64f4e066b9de6195c0fc6c64b9549412a88", features = [], optional = false }
datafusion-proto = { git = "https://github.com/spaceandtimelabs/arrow-datafusion.git", rev = "40cff64f4e066b9de6195c0fc6c64b9549412a88", features = [], optional = false }
env_logger = "0.9"
etcd-client = { version = "0.9", optional = true }
flatbuffers = { version = "2.1.2" }
futures = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14.4"
log = "0.4"
object_store = { git = "https://github.com/apache/arrow-rs.git", rev = "6bb4b5ee16488c2a6427a5897bb6fbe334cc280e", features = [], optional = false }
parking_lot = "0.12"
parse_arg = "0.1.3"
prost = "0.11.0"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sled_package = { package = "sled", version = "0.34", optional = true }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
tonic = "0.8"
tower = { version = "0.4" }
uuid = { version = "1.0", features = ["v4"] }
warp = "0.3"

[dev-dependencies]
ballista-core = { path = "../core", features = [], optional = false }

[build-dependencies]
configure_me_codegen = "0.4.1"
tonic-build = { version = "0.8" }
